--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,6 +22,28 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+/* Clearfix */
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+ 
+.clearfix {
+  display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+  display: block;
+}
+ 
+* html .clearfix {
+  height: 1%;
+}
 
 /* Base text styles */
 
@@ -198,7 +220,7 @@ td {
 
 /* Wrapper */
 .wrapper {
-  width:960px;
+  /*width:960px;*/
 }
 
 
@@ -208,7 +230,7 @@ header {
 	background-color: #171717;
 	color: #FDFDFB;
   width:170px;
-  float:left;
+  /*float:left;*/
   position:fixed;
 	border: 1px solid #000;
 	-webkit-border-top-right-radius: 4px;
@@ -218,7 +240,7 @@ header {
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
+	margin: 0 25px 0 0;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -305,12 +327,25 @@ a.buttons:hover {
 	text-decoration: none;
 }
 
+aside{
+  padding: 0 25px 0 20px;
+  width: 200px;
+  /*clear: both;*/
+  position: fixed;
+  top: 300px;
+}
+
+aside li{
+  list-style: none;
+  padding: 0;
+}
 
 /* Section - for main page content */
 
 section {
+  /*float:right;*/
   width:650px;
-  float:right;
+  margin-left: 275px;
   padding-bottom:50px;
 }
 
@@ -318,7 +353,7 @@ section {
 /* Footer */
 
 footer {
-  width:170px;
+  width:175px;
   float:left;
   position:fixed;
   bottom:10px;
@@ -332,7 +367,7 @@ footer {
     margin:0;
   }
 
-  header, section, footer {
+  header, section, footer, aside {
     float:none;
     position:static;
     width:auto;
@@ -344,13 +379,17 @@ footer {
 		padding:0;
 	}
 
-  header {
+  header{
     padding-right:320px;
   }
 
   section {
     padding:20px 84px 20px 50px;
     margin:0 0 20px;
+  }
+
+  aside{
+    padding: 0 84px 0 50px;
   }
 
   header a small {
@@ -379,8 +418,12 @@ footer {
     margin:0 0 30px;
   }
 
+  aside{
+    padding: 0 0 0 20px;
+  }
+
 	footer {
-		margin: 0 0 0 30px;
+		margin: 0 0 0 20px;
 	}
 
   header ul, header p.view {
@@ -394,12 +437,8 @@ footer {
     display:none;
   }
 
-	footer {
-		margin: 0 0 0 20px;
-	}
-
 	footer a{
-		display:block;
+		/*display:block;*/
 	}
 
 }
