--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,15 @@
         <p>@diestrin on <a  target="_blank" href="https://twitter.com/diestrin">twitter</a> | <a  target="_blank" href="https://plus.google.com/108128671226204701183">google</a></p>
       </footer>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-41741217-1', 'diegobarahona.com');
+      ga('send', 'pageview');
+    </script>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
