Fixing the disqus config

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     var disqus_shortname = 'diegobarahona';
     var disqus_identifier = '{{ page.id }}';
     var disqus_title = '{{ page.title }}';
-    var disqus_url = '{{ page.url }}';
+    var disqus_url = '{{ site.url }}{{ page.url }}';
 
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
