--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,18 @@
         <p>@diestrin on <a  target="_blank" href="https://twitter.com/diestrin">twitter</a> | <a  target="_blank" href="https://plus.google.com/108128671226204701183">google</a></p>
       </footer>
     </div>
+    
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=491829417554730";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
