--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,15 @@
         <p>@diestrin on <a  target="_blank" href="https://twitter.com/diestrin">twitter</a> | <a  target="_blank" href="https://plus.google.com/108128671226204701183">google</a></p>
       </footer>
     </div>
-    
+
+    <script type="text/javascript">
+      (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
+    </script>
+
     <div id="fb-root"></div>
     <script>
       (function(d, s, id) {
