--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@ layout: default
 
 <div class="fb-like" data-send="false" data-layout="box_count" data-width="450" data-show-faces="false"></div>
 
+<div class="g-plusone" data-size="tall"></div>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'diegobarahona';
