--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,12 @@ layout: default
 {{ content }}
 </div>
 
-<div class="fb-like" data-send="false" data-layout="box_count" data-width="450" data-show-faces="false"></div>
-
-<div class="g-plusone" data-size="tall"></div>
+<div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="left:50px;top:50px;">
+    <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+    <a class="addthis_button_tweet" tw:count="vertical"></a>
+    <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+    <a class="addthis_counter"></a>
+</div>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
