Adding the twitter plugin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,16 @@ layout: default
 
 <div class="g-plusone" data-size="tall"></div>
 
+<a 
+    href="https://twitter.com/share" 
+    class="twitter-share-button" 
+    data-url="http://diegobarahona.com"
+    data-via="diestrin"
+    data-count="vertical"
+    data-counturl="{{ site.url }}{{ page.url }}"
+    data-text="{{ page.title }} - {{ site.url }}{{ page.url }}"
+    data-lang="en">Tweet</a>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'diegobarahona';
